--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,47 +1,15 @@
-.note-light {
-    background-color: #e5e9ec;
-    padding: 8px 10px;
-    border: 1px solid #c9d1da;
-    border-radius: 5px;
-}
-
-.note-light.yellow {
-    background-color: #fdf6e4;
-    border: 1px solid #afaba0;
-}
-
-.this {
+*{
     -webkit-font-smoothing: antialiased;
-    background-color: #f5f5f5;
-    margin: 0;
-    padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', sans-serif;
 }
-
-.this .hero {
-    height: calc(7rem + 64px);
-    background-color: #2175F4;
-    background-image: url(/static/images/bg-blue.png);
-    background-repeat: no-repeat;
-    background-position: center;
+nav{
+    z-index: 10000;
+}
+.hero{
+    background-color: #dbecfd;
+    background-image: url(/static/images/bg-blue-light.png);
     background-size: cover;
-    text-align: center;
 }
-
-.this .hero-text {
-    display: block;
-    text-align: center;
-    line-height: 6.5rem;
-    vertical-align: middle;
-    margin: auto auto auto 3.5rem;
-    position: absolute;
-    color: #FFFFFF;
-    font-size: 2.75rem;
-    font-weight: 600;
-    text-shadow: -1px 1px 8px rgba(0,0,0,0.6);
-    /*font-family:monospace;*/
-}
-
+/*-- Pages --*/
 .this .page-content {
     margin: 0;
     padding: 12px 8px 3rem 8px;
@@ -84,7 +52,7 @@
     padding: 1rem 0 .5rem 1.25rem;
 }
 
-.this .page h1, .this .page h2, .this .page h3 {
+.this .page h1, .this .page h2, .this .page h3, .this .page h4, .this .page h5 {
     margin: 0;
     font-weight: 500;
     color: rgba(0,0,0,0.82);
@@ -163,18 +131,14 @@
     border-radius: 4px;
 }
 
+
+
+
+
 /* --- Media stuff ---*/
 @media screen and (max-width: 1000px) {
     .this .pages {
         margin:0 2.5rem;
-    }
-
-    .this h1.title {
-        margin-left: 2.5rem;
-    }
-
-    .this .hero-text {
-        margin-left: 2.5rem;
     }
 }
 
@@ -182,32 +146,11 @@
     .this .pages {
         margin:0 2rem;
     }
-
-    .this h1.title {
-        margin-left: 2rem;
-    }
-
-    .this .hero-text {
-        margin-left: 2rem;
-    }
 }
 
 @media screen and (max-width: 700px) {
     .this .pages {
         margin:0 1rem;
-    }
-
-    .this h1.title {
-        margin-left: 1rem;
-    }
-
-    .this .hero-text {
-        margin-left: 1rem;
-        font-weight: 500;
-    }
-
-    .this .hero {
-        background-size: auto;
     }
 }
 
@@ -215,18 +158,8 @@
     .this .pages {
         margin:0;
     }
-
-    .this h1.title {
-        margin-left: 0;
-    }
-
-    .this .hero-text {
-        margin-left: 1rem;
-    }
 }
 
 @media screen and (max-width: 479px) {
-    .this .hero {
-        height:calc(7rem + 56px);
-    }
+
 }
