--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,6 @@
 *{
     -webkit-font-smoothing: antialiased;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', sans-serif;
 }
 nav{
     z-index: 10000;
@@ -158,7 +159,35 @@ a {
 .form-title{
     margin:2rem auto 2rem auto;
 }
+.this {
+    -webkit-font-smoothing: antialiased;
+    background-color: #f5f5f5;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', sans-serif;
+}
 
+.main-hero {
+    height: calc(7rem + 64px);
+    background-color: #2175F4;
+    background-image: url(/static/images/bg-blue.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+}
+
+.main-hero-text {
+    display: block;
+    text-align: center;
+    line-height: 6.5rem;
+    vertical-align: middle;
+    margin: auto auto auto 3.5rem;
+    position: absolute;
+    color: #FFFFFF;
+    font-size: 2.75rem;
+    font-weight: 600;
+    text-shadow: -1px 1px 8px rgba(0,0,0,0.6);
+    /*font-family:monospace;*/
+}
 /*-- forms --*/
 .form-link{
     vertical-align: middle
