--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,6 +2,10 @@
     -webkit-font-smoothing: antialiased;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', sans-serif;
 }
+html{
+    margin: 0;
+    padding:0;
+}
 nav{
     z-index: 10000;
 }
@@ -9,6 +13,12 @@ nav{
     background-color: #dbecfd;
     background-image: url(/static/images/bg-blue-light.png);
     background-size: cover;
+}
+img{
+    border: 0
+}
+.min-height{
+    min-height: 100vh;
 }
 /*-- colors --*/
 input:not([type]):focus:not([readonly]),input[type=text]:not(.browser-default):focus:not([readonly]),input[type=password]:not(.browser-default):focus:not([readonly]),input[type=email]:not(.browser-default):focus:not([readonly]),input[type=url]:not(.browser-default):focus:not([readonly]),input[type=time]:not(.browser-default):focus:not([readonly]),input[type=date]:not(.browser-default):focus:not([readonly]),input[type=datetime]:not(.browser-default):focus:not([readonly]),input[type=datetime-local]:not(.browser-default):focus:not([readonly]),input[type=tel]:not(.browser-default):focus:not([readonly]),input[type=number]:not(.browser-default):focus:not([readonly]),input[type=search]:not(.browser-default):focus:not([readonly]),textarea.materialize-textarea:focus:not([readonly]) {
@@ -23,13 +33,14 @@ input:not([type]):focus:not([readonly])+label,input[type=text]:not(.browser-defa
 a {
     color: #1565C0;
 }
-/*-- Pages --*/
-.this .page-content {
-    margin: 0;
-    padding: 12px 8px 3rem 8px;
-    background-color: #eee;
+.grey-bg{
+    background-color: #f5f5f5;
 }
-
+/*-- Pages --*/
+.this {
+    -webkit-font-smoothing: antialiased;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', sans-serif;
+}
 .this h1.title {
     color: rgba(0,0,0,0.88);
     font-weight: 600;
@@ -63,7 +74,7 @@ a {
 }
 
 .this .page .content {
-    padding: 1rem 0 .5rem 1.25rem;
+    padding: 1rem 0 0 1.25rem;
 }
 
 .this .page h1, .this .page h2, .this .page h3, .this .page h4, .this .page h5 {
@@ -159,11 +170,6 @@ a {
 .form-title{
     margin:2rem auto 2rem auto;
 }
-.this {
-    -webkit-font-smoothing: antialiased;
-    background-color: #f5f5f5;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', sans-serif;
-}
 
 .main-hero {
     height: calc(7rem + 64px);
@@ -172,12 +178,10 @@ a {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    text-align: center;
 }
 
 .main-hero-text {
     display: block;
-    text-align: center;
     line-height: 6.5rem;
     vertical-align: middle;
     margin: auto auto auto 3.5rem;
@@ -193,6 +197,27 @@ a {
     vertical-align: middle
 /*    margin:.5rem 0 0 0;*/
 }
+/*-- shadows --*/
+.z-depth-0{
+    box-shadow: none;
+}
+/*-- paddings --*/
+.container2{
+    margin:0 1.5rem;
+}
+.pt{
+    margin-top:.25rem;
+}
+.pt-2{
+    margin-top:.5rem;
+}
+.pt-3{
+    margin-top:.75rem;
+}
+
+
+
+
 
 
 
