--- a/static/css/main.css
+++ b/static/css/main.css
@@ -74,6 +74,11 @@ a {
     border: 1px solid rgba(0,0,0,0.3);
     border-radius: 5px;
     cursor: pointer;
+    
+}
+.this .page.has-shadow{
+    border: none;
+    box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12)
 }
 
 .this .page:hover {
